# learn_path

./: .gitignore  README.md  start.sh  validate-setup.sh
backend/: env.example  main.py  migrate_add_question_fields.py  pyproject.toml  requirements.txt  uvicorn_config.py
backend/app/: __init__.py  config.py  database.py
backend/app/models/: assessment.py  core_models.py  course.py  progress.py  study_plan.py  user.py
backend/app/routers/: auth.py  courses.py  learning_api.py  progress.py  study_plans.py  users.py
backend/app/schemas/: course.py  learning_schemas.py  study_plan.py  user.py
backend/app/services/: gemini_service.py  openai_service.py
backend/app/utils/: auth.py  logger.py  prompt_loader.py
backend/data/: .gitkeep
backend/data/uploads/: .gitkeep
backend/logs/: .gitkeep
backend/prompts/: adaptive_questions_generation.txt  custom_questions_generation.txt  programming_question_evaluation.txt  study_plan_generation.txt
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  LearnPathApp.tsx  main.tsx  theme.ts
frontend/src/components/: CodeBlock.tsx  Layout.tsx  LoadingSpinner.tsx  ProgrammingQuestion.tsx  SessionStatus.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: CourseDetailPage.tsx  CoursesPage.tsx  DashboardPage.tsx  LoginPage.tsx  ProfilePage.tsx  ProgressPage.tsx  RegisterPage.tsx  StudyPlanPage.tsx
frontend/src/pages/learning/: CourseSelectionPage.tsx  DashboardPage.tsx  LoginRegisterPage.tsx  ProgressDashboard.tsx  QuestionCustomizationPage.tsx  QuestionPage.tsx  ReviewPage.tsx  StudyPlanPage.tsx
frontend/src/services/: api.ts  authService.ts  courseService.ts  learningApiService.ts
frontend/src/utils/: sessionManager.ts
